# ar3_core

./: .gitignore  LICENSE  README.md
ar3_control/: CMakeLists.txt  README.md  package.xml
ar3_control/launch/: move_group_demo.launch
ar3_control/src/: move_group_demo.cpp
ar3_description/: CMakeLists.txt  README.md  package.xml
ar3_description/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
ar3_description/urdf/: ar3.urdf  ar3.urdf.xacro  ar3_gazebo.urdf.xacro
ar3_gazebo/: CMakeLists.txt  README.md  package.xml
ar3_gazebo/config/: ar3_gazebo_controllers.yaml
ar3_gazebo/launch/: ar3_gazebo_bringup.launch  ar3_world.launch
ar3_hardware_drivers/: CMakeLists.txt  README.md  package.xml
ar3_hardware_drivers/include/ar3_hardware_drivers/: TeensyDriver.h
ar3_hardware_drivers/src/: TeensyDriver.cpp
ar3_hardware_interface/: CMakeLists.txt  README.md  package.xml
ar3_hardware_interface/config/: controllers.yaml  hardware_driver.yaml  hardware_interface.yaml  joint_offsets.yaml
ar3_hardware_interface/include/ar3_hardware_interface/: ar3_hardware_interface.h
ar3_hardware_interface/launch/: ar3_hardware_bringup.launch
ar3_hardware_interface/src/: ar3_hardware_interface.cpp  ar3_hardware_interface_node.cpp
ar3_microcontrollers/: README.md
ar3_microcontrollers/teensy/baseline_dev/: baseline_dev.ino
ar3_microcontrollers/teensy/baseline_with_ARCS/: baseline_with_ARCS.ino
ar3_moveit_config/: CMakeLists.txt  README.md  package.xml
ar3_moveit_config/config/: ar3.srdf  controllers.yaml  fake_joint_offsets.yaml  joint_limits.yaml  ompl_planning.yaml
ar3_moveit_config/launch/: ar3_moveit_bringup.launch  ar3_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
