<?xml version="1.0"?>
<package format="2">
  <name>ar3_gazebo</name>
  <version>2.2.0</version>
  <description>Gazebo simulation for Niryo One</description>
  <author>Edouard Renard</author>
  <maintainer email="e.rey-coquais@niryo.com">Etienne Rey-Coquais</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>ar3_description</exec_depend>

  <export>
  </export>
</package>
