<?xml version="1.0"?>
<package>
  <name>ar3_hardware_interface</name>
  <version>0.0.1</version>
  <description>
    The ar3_hardware_interface package provides the hardware interface for
    running an AR3 robot using the ros_control software framework.
  </description>

  <maintainer email="dexterong94@gmail.com">Dexter Ong</maintainer>

  <license>MIT</license>

  <author email="dexterong94@gmail.com">Dexter Ong</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>ar3_hardware_drivers</build_depend>

  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>ar3_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>ar3_hardware_drivers</run_depend>

</package>
